// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@handl/fetch-manager >> batching >> multiple requests >> correct request 1`] = `
Array [
  "https://api.github.com/graphql?requestId=f666cc27cdcfcecacb340b64fcf27506-70a245971c9c179bc5c30c3925e4881c",
  Object {
    "body": "{\\"batched\\":true,\\"context\\":{\\"handlID\\":\\"123456789\\",\\"operation\\":\\"query\\"},\\"request\\":{\\"f666cc27cdcfcecacb340b64fcf27506\\":\\"\\\\n    {\\\\n      organization(login: \\\\\\"facebook\\\\\\") {\\\\n        description\\\\n        login\\\\n        id\\\\n      }\\\\n    }\\\\n  \\",\\"70a245971c9c179bc5c30c3925e4881c\\":\\"\\\\n    {\\\\n      organization(login: \\\\\\"facebook\\\\\\") {\\\\n        email\\\\n        name\\\\n        url\\\\n        id\\\\n      }\\\\n    }\\\\n  \\"}}",
    "headers": Headers {
      "_headers": Object {
        "content-type": Array [
          "application/json",
        ],
      },
    },
    "method": "POST",
  },
]
`;

exports[`@handl/fetch-manager >> batching >> multiple requests >> correct response data 1`] = `
Object {
  "data": Object {
    "organization": Object {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
    },
  },
  "headers": Headers {
    "_headers": Object {
      "cache-control": Array [
        "public, max-age=5",
      ],
      "content-length": Array [
        "414",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
}
`;

exports[`@handl/fetch-manager >> batching >> multiple requests >> correct response data 2`] = `
Object {
  "data": Object {
    "organization": Object {
      "email": "",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "name": "Facebook",
      "url": "https://github.com/facebook",
    },
  },
  "headers": Headers {
    "_headers": Object {
      "cache-control": Array [
        "public, max-age=5",
      ],
      "content-length": Array [
        "414",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
}
`;

exports[`@handl/fetch-manager >> batching >> single request >> correct request 1`] = `
Array [
  "https://api.github.com/graphql?requestId=ea1cbc58eca798225b53f59d95ffb23a",
  Object {
    "body": "{\\"batched\\":true,\\"context\\":{\\"handlID\\":\\"123456789\\",\\"operation\\":\\"query\\"},\\"request\\":{\\"ea1cbc58eca798225b53f59d95ffb23a\\":\\"\\\\n  {\\\\n    organization(login: \\\\\\"facebook\\\\\\") {\\\\n      description\\\\n      email\\\\n      login\\\\n      name\\\\n      url\\\\n      id\\\\n    }\\\\n  }\\\\n\\"}}",
    "headers": Headers {
      "_headers": Object {
        "content-type": Array [
          "application/json",
        ],
      },
    },
    "method": "POST",
  },
]
`;

exports[`@handl/fetch-manager >> batching >> single request >> correct response data 1`] = `
Object {
  "data": Object {
    "organization": Object {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "email": "",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
      "name": "Facebook",
      "url": "https://github.com/facebook",
    },
  },
  "headers": Headers {
    "_headers": Object {
      "cache-control": Array [
        "public, max-age=5",
      ],
      "content-length": Array [
        "315",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
}
`;

exports[`@handl/fetch-manager >> no batching >> correct request 1`] = `
Array [
  "https://api.github.com/graphql?requestId=ea1cbc58eca798225b53f59d95ffb23a",
  Object {
    "body": "{\\"batched\\":false,\\"context\\":{\\"handlID\\":\\"123456789\\",\\"operation\\":\\"query\\"},\\"request\\":\\"\\\\n  {\\\\n    organization(login: \\\\\\"facebook\\\\\\") {\\\\n      description\\\\n      email\\\\n      login\\\\n      name\\\\n      url\\\\n      id\\\\n    }\\\\n  }\\\\n\\"}",
    "headers": Headers {
      "_headers": Object {
        "content-type": Array [
          "application/json",
        ],
      },
    },
    "method": "POST",
  },
]
`;

exports[`@handl/fetch-manager >> no batching >> correct response data 1`] = `
Object {
  "data": Object {
    "organization": Object {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "email": "",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
      "name": "Facebook",
      "url": "https://github.com/facebook",
    },
  },
  "headers": Headers {
    "_headers": Object {
      "cache-control": Array [
        "public, max-age=5",
      ],
      "content-length": Array [
        "268",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
}
`;
